Convert agent from flow-based to goal-based pattern
- Replace Triage/Category/Input/Choose with Goal/ActionTool pattern
- Use useAdditionalGoalAgentChildren to add goals to Base Agent's GoalAgent
- Add CompatibilityDate.STABLE for production readiness
- Enable abuse detection with defend mode
- Add integrations-registry.ts for builtin integrations
- Fix tsconfig.json path to include .json extension

The agent now uses the Sierra Base Agent's GoalAgent with a custom
UnsubscribeGoal that provides an ActionTool for email unsubscription.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 // https://typescriptlang.org
 {
-  "extends": "@sierra/agent/tsconfig",
+  "extends": "@sierra/agent/tsconfig.json",
   "include": [
     "agent/**/*",
     "content-schema.ts",
