refactor: code style and rename skills to goals

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,6 +1,9 @@
 // https://biomejs.dev
 {
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
+  "files": {
+    "includes": ["**", "!integrations-registry.ts"]
+  },
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
